--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -20,7 +20,7 @@ jobs:
         run: echo "$GITHUB_CONTEXT"
       - name: dump conditions
         run: |
-          echo "isfork: ${{ github.event.pull_request.base.repo.url != github.event.pull_request.head.repo.url }}
+          echo "isfork: ${{ github.event.pull_request.base.repo.url != github.event.pull_request.head.repo.url }}"
           echo "ispush: ${{ github.event_name == 'push' }}"
       - name: dump secret
         run: |
