--- a/.github/workflows/pull-request-target-push.yml
+++ b/.github/workflows/pull-request-target-push.yml
@@ -6,7 +6,7 @@ name: pr-target-push
 # events but only for the main branch
 on:
   pull_request_target:
-    types: [opened, synchronize, reopened, edited]
+    types: [] # temporarily disabled: [opened, synchronize, reopened, edited]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
