--- a/.github/workflows/pr-target.yml
+++ b/.github/workflows/pr-target.yml
@@ -1,6 +1,4 @@
-# This is a basic workflow to help you get started with Actions
-
-name: pr-target-push
+name: pr-target
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
