--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -6,7 +6,7 @@ name: CI
 # events but only for the main branch
 on:
   push: {}
-  pull_request_target: {}
+  pull_request: {}
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
@@ -35,7 +35,7 @@ jobs:
         if: github.event_name == 'push'
       - name: checkout head repo on pull request
         uses: actions/checkout@v2
-        if: github.event_name == 'pull_request_target'
+        if: github.event_name == 'pull_request'
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.head_ref }}
