--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,6 +1,6 @@
 # This is a basic workflow to help you get started with Actions
 
-name: CI
+name: test-action
 
 # Controls when the action will run. Triggers the workflow on push or pull request
 # events but only for the main branch
@@ -32,15 +32,18 @@ jobs:
           echo "${{ secrets.NOT_REALLY_SECRET }}" | wc -c
       - name: checkout default repo on push
         uses: actions/checkout@v2
-        if: github.event_name == 'push'
-      - name: checkout head repo on pull request
-        uses: actions/checkout@v2
-        if: github.event_name == 'pull_request'
-        with:
-          repository: ${{ github.event.pull_request.head.repo.full_name }}
-          ref: ${{ github.head_ref }}
+      #   if: github.event_name == 'push'
+      # - name: checkout head repo on pull request
+      #   uses: actions/checkout@v2
+      #   if: github.event_name == 'pull_request'
+      #   with:
+      #     repository: ${{ github.event.pull_request.head.repo.full_name }}
+      #     ref: ${{ github.head_ref }}
       - name: Dump readme content
         run: cat README.md
+      - run: |
+          git status
+          git checkout ${{ github.head_ref }}
       - name: Dump job context
         env:
           JOB_CONTEXT: ${{ toJson(job) }}
