--- a/.github/workflows/print-vars.yml
+++ b/.github/workflows/print-vars.yml
@@ -1,16 +1,10 @@
-# This is a basic workflow to help you get started with Actions
+name: print-vars
 
-name: test-action
-
-# Controls when the action will run. Triggers the workflow on push or pull request
-# events but only for the main branch
 on:
   push: {}
   pull_request: {}
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
     runs-on: ubuntu-16.04
     if: github.event_name == 'push' || github.event.pull_request.base.repo.url != github.event.pull_request.head.repo.url
