Update pr.yml (#21)
* Update pr.yml

* chore: txt file from pull_request event

* Update pr.yml

* Update pr-plain-21.txt

* chore: txt file from pull_request event

* put token in checkout action, since it persists it anyway

* Update pr-plain-21.txt

* chore: txt file from pull_request event

Co-authored-by: mmkal <mmkal@users.noreply.github.com>

--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -20,6 +20,7 @@ jobs:
         with:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.head_ref }}
+          token: ${{ secrets.GH_CI_TOKEN }}
 
       - name: crupdate pr file
         run: |
@@ -47,8 +48,7 @@ jobs:
 
           git commit -m "chore: txt file from pull_request event"
 
-          remote_repo="https://${{ github.actor }}:${{ secrets.GITHUB_TOKEN }}@github.com/${{ github.event.pull_request.head.repo.full_name }}.git"
-          git push "${remote_repo}"
+          git push
 
           CHANGE_HASH=$(git rev-parse --short HEAD)
           COMMENT_BODY="@${{ github.actor }} - changes were pushed to your branch: $CHANGE_HASH."
