--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -5,6 +5,8 @@ name: pr
 on:
   pull_request:
     types: [opened, synchronize, reopened, edited]
+    branches-ignore: 
+      - ignoreme/**
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
