--- a/.github/workflows/redis.yml
+++ b/.github/workflows/redis.yml
@@ -23,7 +23,7 @@ jobs:
 
       - name: Connect to Redis
         run: |
-          echo 'var c = require("redis").createClient(); c.ping((e, r) => {console.log({e, r}); process.exit(e?1:0)})' > redis.js
+          echo 'var c = require("redis").createClient({host: "redis"}); c.ping((e, r) => {console.log({e, r}); process.exit(e?1:0)})' > redis.js
           node redis.js
         # env:
         #   # The hostname used to communicate with the Redis service container
