--- a/.github/workflows/redis.yml
+++ b/.github/workflows/redis.yml
@@ -7,7 +7,7 @@ jobs:
 
     services:
       redis:
-        image: redis
+        image: redis:6.0.3
         options: >-
           --health-cmd "redis-cli ping"
           --health-interval 10s
