--- a/.github/actions/hello-world-action/action.yml
+++ b/.github/actions/hello-world-action/action.yml
@@ -2,7 +2,7 @@ name: 'Hello World'
 description: 'Greet someone'
 
 inputs:
-  who-to-greet:  # id of input
+  who-to-greet:
     description: 'Who to greet'
     required: true
     default: 'World'
@@ -16,9 +16,9 @@ runs:
   using: "composite"
   steps:
     - run: echo Hello ${{ inputs.who-to-greet }}.
-      # shell: bash
+      shell: bash
     - id: random-number-generator
       run: echo "::set-output name=random-id::$(echo $RANDOM)"
-      # shell: bash
+      shell: bash
       # - run: ${{ github.action_path }}/goodbye.sh
       # shell: bash
